<resources>
    <string name="app_name">Alti Dynamics</string>

    <!--scenario-->
    <string name="no_scenarios">No Scenarios found!</string>
    <string name="scenarios">Scenarios</string>
    <string name="motor_angle">Motor Angle</string>
    <string name="motor_speed">Free Stream</string>
    <string name="duration">Duration</string>
    <string name="motor_angle_value">change motor angle to %d</string>
    <string name="motor_speed_value">change motor speed to %d</string>
    <string name="time">for %d seconds</string>
    <string name="step_subtitle">speed: %1$d, angle: %2$d.</string>
    <string name="set">set</string>
    <string name="to">to</string>
    <string name="for_">for</string>
    <string name="value">value</string>
    <string name="seconds">seconds</string>
    <string name="add">add</string>

    <!--side-small-->
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting…</string>
    <string name="scanning">Scanning…</string>
    <string name="select_device">Select Device</string>
    <string name="title_other_devices">other_devices</string>
    <string name="button_scan">scan</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="none_paired">No Paired Devices</string>
    <string name="none_found">No Devices Found</string>
    <string name="none_connected">No Connected Devices Found</string>
    <string name="scenario_status">Scenarios</string>

    <!--toolbar and tab layout-->
    <string-array name="tabs">
        <item>Digital</item>
        <item>Graphical</item>
    </string-array>
    <string name="search_bluetooth">find and connect to a Bluetooth Device</string>
    <string name="turning_bt_on">Turning Bluetooth on…</string>
    <string name="turning_bt_off">Turning Bluetooth off…</string>

    <!--Errors-->
    <string name="close_error">Could not close unwanted socket</string>
    <string name="connection_lost">Connection Lost!</string>

    <!--Digital-->
    <string name="title_motor_load">Motor Load</string>
    <string name="title_wind_speed">Wind Speed</string>
    <string name="title_attack_angle">Attack Angle</string>
    <string name="title_pitot_speed">Target Speed</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_altitude">Altitude</string>
    <string name="title_weight_1">Weight 1</string>
    <string name="title_weight_2">Weight 2</string>
    <string name="title_weight_3">Weight 3</string>
    <string name="plot_dialog_title">Data to plot</string>
    <string-array name="digital_titles">
        <item>Time</item>
        <item>Motor Load</item>
        <item>Wind Speed</item>
        <item>Attack Angle</item>
        <item>Target Speed</item>
        <item>Temperature</item>
        <item>Humidity</item>
        <item>Altitude</item>
        <item>Weight 1</item>
        <item>Weight 2</item>
        <item>Weight 3</item>
    </string-array>

    <string name="Y">Y - %s (%s)</string>
    <string name="X">X - %s (%s)</string>
    <string name="y_label">Y - Motor Speed (m/s)</string>
    <string name="x_label">X - Time (s)</string>
    <string name="graph_title">%s vs %s</string>

    <string name="unit_speed_load">%</string>
    <string name="unit_speed">m/s</string>
    <string name="unit_angle">\u00B0</string>
    <string name="unit_temperature">\u2103</string>
    <string name="unit_humidity">%</string>
    <string name="unit_altitude">m</string>
    <string name="unit_weight">N</string>
    <string name="unit_weight3">N/m</string>
    <string name="clear">clear all</string>
    <string name="from_file">load from file</string>
    <string name="random">random scenario</string>
    <string name="graph_item">values to graph</string>
    <string name="tare_values">Tare Values</string>
    <string-array name="digital_units">
        <item>s</item>
        <item>%</item>
        <item>m/s</item>
        <item>\u00B0</item>
        <item>m/s</item>
        <item>\u2103</item>
        <item>%</item>
        <item>m</item>
        <item>N</item>
        <item>N</item>
        <item>N/m</item>
    </string-array>

</resources>
